--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,8 @@ body {
     margin-bottom: .7em;
 }
 
-.comnt-info > * {
+.comnt-info img,
+.comnt-username {
     margin-right: 1em;
 }
 
@@ -85,6 +86,11 @@ body {
 .comnt-username {
     font-weight: 700;
     color: var(--dark-blue);
+}
+
+.comnt-info-wrap {
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .active-user {
@@ -102,6 +108,10 @@ body {
 .comnt-text {
     line-height: 1.5em;
     width: 100%;
+}
+
+.comnt-txt {
+    white-space: pre-wrap;
 }
 
 .voting-detail {
