--- a/css/actions.css
+++ b/css/actions.css
@@ -99,6 +99,62 @@
     margin-top: .75em;
 }
 
+.modal {
+    position: fixed;
+    display: flex;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    padding: 1em;
+    align-items: center;
+    background-color: rgba(0,0,0,.5);
+    color: var(--grayish-blue);
+}
+
+.modal-container {
+    width: 100%;
+    max-width: 400px;
+    margin: auto;
+    padding: 1.5em;
+    border-radius: .7em;
+    background-color: var(--white);
+}
+
+.modal h2 {
+    font-size: 1.22em;
+    margin-bottom: .65em;
+    font-weight: 600;
+}
+
+.modal p {
+    line-height: 1.4em;
+}
+
+.modal-actions {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 1em;
+    margin-top: 1em;
+}
+
+.modal .btn {
+    padding: .9em 0;
+    color: var(--white);
+    font-weight: 500;
+    border-radius: 7px;
+    transition: all ease .3s;
+    width: 100%;
+}
+
+.modal .btn:hover {
+    opacity: 0.5;
+}
+
+.yes-btn { background-color: var(--red) }
+.no-btn { background-color: var(--grayish-blue) }
+
 @media (min-width: 640px) {
     .mobile-only { display: none}
     .desktop-only { display: block }
@@ -129,5 +185,18 @@
     .reply-box img {
         margin-right: 1em;
         margin-top: .3em;
+    }
+
+    .modal h2 {
+        font-size: 1.5em;
+    }
+
+    .modal p {
+        line-height: 1.5em;
+        padding-bottom: .3em;
+    }
+
+    .modal-container {
+        padding: 2em;
     }
 }
