--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,7 @@ body {
     display: flex;
     flex-direction: row;
     width: fit-content;
+    height: fit-content;
     align-items: center;
     padding: 0 .4em;
     border-radius: 11px;
